tests/ui/async-fn.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
 --> tests/ui/async-fn.rs:5:8
  |
3 | #[no_panic]
  | ----------- this is not `async`
4 | async fn f() {
5 |     g().await;
  |        ^^^^^^ only allowed inside `async` functions and blocks
